--- a/cnrs_grid.ipynb
+++ b/cnrs_grid.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "input_data_file = 'fr-esr-structures-recherche-publiques-actives.csv'\n",
     "output_data_file = 'fr-esr-structures-recherche-publiques-actives-with-grid.csv'\n",
-    "MATCHER_IP = 'http://51.210.211.139'\n",
+    "MATCHER_IP = 'http://**.***.***.***'\n",
     "matcher_url = f'{MATCHER_IP}/match_api'"
    ]
   },
